<resources>
    <string name="app_name">EcoSell</string>
    <string name="starting_title_text">Save. Our. Planet.</string>
    <string name="what_to_sell_today">What do you want to sell today?</string>
    <string name="start_selling_now">Start Selling Now</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="sign_up_here">If you do not have an account, sign up here</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create my account</string>
    <string name="sign_in_here">Already have an account? Sign in here</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_group_fragment">Hello group fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_profile_photo">Add a profile photo</string>
    <string name="enter_username">Enter a Username</string>
    <string name="sign_up_enter_location">Enter your location</string>
    <string name="image_button">image button</string>
    <string name="what_to_search">Search and Save Our Plant...</string>
    <string name="navigation_me">Me</string>
    <string name="Groups">Groups</string>
    <string name="title_explore">Explore</string>
    <string name="title_sell">Sell</string>
    <string name="settings">Settings</string>
    <string name="placeholder_username">Placeholder Username</string>
    <string name="placeholderemail">placeholderEmail@gmail.com</string>
    <string name="me_mobile_string">Mobile:</string>
    <string name="me_mobile_num">+852 9876 1234</string>
    <string name="me_location_string">Location:</string>
    <string name="me_location">Hong Kong</string>
    <string name="me_edit_profile_button_title">Edit Profile</string>
    <string name="me_listings_string">Listings</string>
    <string name="me_payment_string">Payment</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="change_profile_photo">Update profile photo</string>
    <string name="edit_username">Update your username</string>
    <string name="edit_email_address">Update your email address</string>
    <string name="update_profile">Update my profile</string>
    <string name="change_password">Update your password</string>
    <string name="change_location">Update your location</string>
    <string name="enter_old_password">Enter your old password</string>
    <string name="update_password_button_text">Update my password</string>
    <string name="are_there_additional_mailing_or_delivery_options_and_charges">Are there additional mailing or delivery options and charges?</string>
    <string name="heavily_used">Heavily Used</string>
    <string name="well_used">Well used</string>
    <string name="like_new">Like New</string>
    <string name="enter_the_price_of_your_listing">Enter the price of your listing</string>
    <string name="brand_new">Brand New</string>
    <string name="name_your_listing">Name your listing</string>
    <string name="enter_a_category">Enter a category</string>
    <string name="mailing_and_delivery">Mailing and Delivery</string>
    <string name="list_it">List it!</string>
    <string name="describe_your_listing">Describe your listing</string>
    <string name="log_out">Log out</string>
    <string name="number_of_listings">Number of listings:</string>
</resources>