<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/primary_variant"
                android:textSize="30sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sign_up_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/signup_add_profile_image"
                app:civ_border_color="#bdc3c7"
                app:civ_border_width="1dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/add_profile_photo"
                android:textColor="@color/primary_variant"
                android:textSize="13sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/signup_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/username_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_input"
                        android:layout_marginTop="16dp"
                        android:paddingHorizontal="8dp"
                        android:hint="@string/enter_username"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <AutoCompleteTextView
                        android:id="@+id/sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="8dp"
                        android:background="@drawable/custom_input"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_password"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="8dp"
                        android:background="@drawable/custom_input"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <AutoCompleteTextView
                        android:id="@+id/sign_up_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_phone_number"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:background="@drawable/custom_input"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <AutoCompleteTextView
                        android:id="@+id/sign_up_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/sign_up_enter_location"
                        android:maxLines="1"
                        android:paddingHorizontal="8dp"
                        android:background="@drawable/custom_input"
                        android:minHeight="48dp"
                        tools:ignore="TextContrastCheck" />

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/primary_variant"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        app:cornerRadius="4dp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/link_to_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/sign_in_here"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_500"
                    app:cornerRadius="6dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>