<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp">

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@null"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/image_button"
                android:cropToPadding="false"
                android:focusable="true"
                android:hapticFeedbackEnabled="false"
                android:scaleType="centerCrop"
                android:src="@drawable/signup_add_profile_image"
                app:civ_border_color="#95a5a6"
                app:civ_border_width="2dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/change_profile_photo"
                android:textColor="@color/primary_variant"
                android:textSize="13sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/edit_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/edit_profile_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <AutoCompleteTextView
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/edit_username"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <AutoCompleteTextView
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/edit_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <AutoCompleteTextView
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="Update your phone number"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <AutoCompleteTextView
                    android:id="@+id/edit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/change_location"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/edit_user_profile_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/primary_variant"
                    android:text="@string/update_profile"
                    android:textColor="@color/white"
                    app:cornerRadius="4dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>